# CPA_Tracker

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
gui/: UI.cpp  UI.h
main/: main.cpp
pkg/: Calculator.cpp  Calculator.h  Course.cpp  Course.h  Search.cpp  Search.h  Sort.cpp  Sort.h
resources/: CPATracker.desktop
sampleDataTable/: sample.csv
